Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

03-Feb-2011 Jean-Marie Simonet
 #$ [#24724] Inconsistency in the Link Author article option. Thanks Bill.
 
02-Feb-2011 Mark Dexter
 # [#24702] *Don't show empty divs in mod_login
 # [#24704] *menu items metadata not implemented
 # [#24698] *Incorrect tooltip for the Enabled column in Plug-In Manager
 # [#24695] *Incorrect tooltip in News Feed Manager
 # [#24708] *Contact form in frontend does not display the star for required fields


02-Feb-2011 Jean-Marie Simonet
 $ Updated bg-BG.ini

01-Feb-2011 Jean-Marie Simonet
 # [#24701] New preview screenshots required for the admin templates, Thanks Jozcef.
 #$ [#24694] Missing tooltip in Web Links Manager. Thanks Bill.

31-Jan-2011 Mark Dexter
 # [#24642] Incorrect term in a tooltip in the Menu Items screen
 # [#24681] *Issue in back-end login module with Languages not installed in db but present in the admin language folder
 # [#24265] Strict standards: Declaration of WeblinksModelCategory::getItems() should be compatible with that of JModelList::getItems() in
 # [#24298] Screens jumps when using the ACL widget
 # [#24336] *PHP warning in extension manger
 # [#24674] Empty tooltips in module edit screens
 # [#24405] Library JURI has an optional parameter: it should be mandatory
 # [#24665] Inconsistency in the Add new newsfeed screen
 # [#24591] No rounded corners in Opera for Modal
 # [#24557] Mod popular and latest article processing events in content plugins

31-Jan-2011 Jean-Marie Simonet
 $ Deleting duplicate lang string
 $ Updating aa-AA.ini 

30-Jan-2011 Jean-Marie Simonet
 $ Customising a lang key to fit different languages

29-Jan-2011 Mark Dexter
 # [#24288] com_mailto Spam Email Relay
 # [#24371] SQL error in com_contact if id not set