@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 03-Feb-2011 Jean-Marie Simonet
  #$ [#24724] Inconsistency in the Link Author article option. Thanks Bill.
+ # [#24726] Link Author option lacks in Archived Articles menu item. Thanks Bill.
  
 02-Feb-2011 Mark Dexter
  # [#24702] *Don't show empty divs in mod_login
